src/objects/M_E_Metric__c.object
<CustomObject>
    <description>M &amp; E Metrics</description>
    <fields>
        <fullName>Automated__c</fullName>
        <description>Is this value automated or not? This will determine whether it is editable on the Metric Admin page.</description>
        <inlineHelpText>Is this value automated or not? This will determine whether it is editable on the Metric Admin page.</inlineHelpText>
        <label>Automated</label>
        <picklist>
            <picklistValues>
                <fullName>False</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>True</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <description>The type of calcualtion that this metric is</description>
        <label>Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cumulative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Further_Link_Text__c</fullName>
        <description>The text that is displayed on the link</description>
        <inlineHelpText>Put something meaningful and human readable</inlineHelpText>
        <label>Further Link Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Further_Link_Url__c</fullName>
        <description>The link to a VF page that will open when the link is pressed</description>
        <inlineHelpText>Only needs to be the file extensions. Will assume that it is on the same server</inlineHelpText>
        <label>Further Link Url</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This metric is a header. This means that it is a dummy metric that is used to have a header for another set of metrics below it. Will have no values other than a Label, area and order</description>
        <label>Is Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lickert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this metric part of a lickert scale</description>
        <inlineHelpText>Check if this metric is part of a lickert scale. Format for lickert scale Name is &lt;param name&gt;_&lt;lickert order number&gt; e.g. Do_You_Like_Bread_1</inlineHelpText>
        <label>Is Lickert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_On_Fly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this metrics value should be calculated on the fly</description>
        <inlineHelpText>Only check this if you know what you are doing</inlineHelpText>
        <label>Is On Fly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>The label for this metric. Will be displayed on the dashboard.</description>
        <inlineHelpText>The label for this metric. Will be displayed on the dashboard.</inlineHelpText>
        <label>Label</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>M_E_Area__c</fullName>
        <description>Under what M&amp;E area does this metric fall? This helps with organisation on the dashboard.</description>
        <inlineHelpText>Under what M&amp;E area does this metric fall? This helps with organisation on the dashboard.</inlineHelpText>
        <label>M&amp;E Area</label>
        <picklist>
            <picklistValues>
                <fullName>Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Metric_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The section that the metric belongs to</description>
        <inlineHelpText>Leave blank if this metric is in the old style dashboard</inlineHelpText>
        <label>Metric Section</label>
        <referenceTo>Metric_Section__c</referenceTo>
        <relationshipLabel>M&amp;E Metrics</relationshipLabel>
        <relationshipName>M_E_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Not_For_Public__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the metric be on the public dashboards</description>
        <inlineHelpText>Select true if this metric should not be shown on the public dashboard</inlineHelpText>
        <label>Not For Public</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>On_The_Fly_Calculation_Type__c</fullName>
        <description>The type of on the fly calculation that this metric requires</description>
        <inlineHelpText>Choose one of these if the metric is to be calculated on the fly</inlineHelpText>
        <label>On The Fly Calculation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Count</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Ordering in list</description>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organisation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>M&amp;E Metrics</relationshipLabel>
        <relationshipName>M_E_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The projected value for this metric for the given quarter. Should be entered manually.</description>
        <inlineHelpText>The projected value for this metric for the given quarter. Should be entered manually</inlineHelpText>
        <label>Projected Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Propagate_Targets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should the a target propagate up the hierarchy when it is changed</description>
        <inlineHelpText>Leave this alone unless you are told to change it</inlineHelpText>
        <label>Propagate Targets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reverse_Comparison__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked that means that the actual value should be below the target value</description>
        <label>Reverse Comparison</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scorecard__c</fullName>
        <description>Under what area of the balanced scorecard does this metric fall?</description>
        <inlineHelpText>Under what area of the balanced scorecard does this metric fall?</inlineHelpText>
        <label>Scorecard Area</label>
        <picklist>
            <picklistValues>
                <fullName>People</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <description>Add an extra label to the metric</description>
        <label>Sub Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Divide__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to allow this metric to be divided in to smaller sub metrics</description>
        <label>Sub Divide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subdivider__c</fullName>
        <description>The item that subdivides these metrics</description>
        <inlineHelpText>Select what the metrics are to be subdivided by</inlineHelpText>
        <label>Subdivider</label>
        <picklist>
            <picklistValues>
                <fullName>District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subcounty</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Period__c</fullName>
        <description>How often is this metric updated</description>
        <label>Update Period</label>
        <picklist>
            <picklistValues>
                <fullName>TBC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ticker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biannually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>M&amp;E Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Label__c</columns>
        <columns>NAME</columns>
        <columns>M_E_Area__c</columns>
        <columns>Scorecard__c</columns>
        <columns>Projected_Value__c</columns>
        <columns>Order__c</columns>
        <columns>Organisation__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>M&amp;E Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>M&amp;E Metrics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>